<resources>
    <string name="app_name">TerraIncognita</string>
    <string name="btn_gen">Сгенерировать</string>
    <string name="set_tit_label">Настройки</string>
    <string name="set_count_players">Количество игроков:</string>
    <string name="set_count_portals">Количество порталов:</string>
    <string name="set_count_wals">Количество внутренних стен:</string>
    <string name="set_count_wals1">Мало</string>
    <string name="set_count_wals2">Средне</string>
    <string name="set_count_wals3">Много</string>
    <string name="set_no">Нет</string>
    <string name="set_yes">Есть</string>
    <string name="set_sizes">Размеры карты:</string>
    <string name="set_river">Наличие реки:</string>

    <string name="ok">Готово</string>

    <string name="s_and"> и </string>

    <string name="s_player">Игрок</string>
    <string name="s_1">Выберите прозвище:</string>
    <string name="s_2">Выберите начальную позицию:</string>

    <string name="p_raund">Ходит игрок</string>
    <string name="p_result">Результат игрока</string>
    <string name="p_end">Ход игрока</string>
    <string name="p_tape">нажмите, чтобы увидеть</string>

    <string name="r_start">клетка на которую вы попали:  </string>
    <string name="r_inf">клетка на которой вы находитесь:  </string>
    <string name="r_empty">пустая клетка </string>
    <string name="r_stop">вы остаетесь на месте</string>
    <string name="r_wall">стена</string>
    <string name="r_exit">выход!</string>
    <string name="r_win">ПОБЕДИТЕЛЬ! </string>

    <string name="get_inf">Информация о сыгранной игре</string>

    <string name="r_arsenal">арсенал </string>
    <string name="r_arsenal_0">вы не можете подобрать припасы</string>
    <string name="r_arsenal_1">вы подбираете припасы</string>

    <string name="r_hospital">госпиталь </string>
    <string name="r_hospital_0">вы теперь здоровы</string>

    <string name="r_wound">ранение!</string>
    <string name="r_treasure">клад!</string>
    <string name="r_treasure_1">вы подбираете его</string>
    <string name="r_treasure_0">вы не можете его подобрать</string>

    <string name="r_portal">портал </string>
    <string name="r_portal_0">вы перемещаетесь в следующий портал</string>

    <string name="r_river">река</string>
    <string name="r_river_e">по реке</string>
    <string name="r_river_s">сток реки</string>
    <string name="r_river0">вы смещаетесь</string>

    <string name="s_up"> вверх </string>
    <string name="s_up2"> сверху </string>
    <string name="s_right"> вправо </string>
    <string name="s_right2"> справа </string>
    <string name="s_bottom"> вниз </string>
    <string name="s_bottom2"> снизу </string>
    <string name="s_left"> влево </string>
    <string name="s_left2"> слева </string>

    <string name="f_fire">вы стреляете</string>
    <string name="f_fire0">вы ни по кому не попадаете</string>
    <string name="f_fire11">теперь игрок  </string>
    <string name="f_fire12">  ранен</string>
    <string name="f_fire_21">теперь игроки  </string>
    <string name="f_fire_22">  ранены</string>
    <string name="w_player">вас ранили. вы теряете свои вещи</string>

    <string name="d_dinamite">вы пытаетесь взорвать стену</string>
    <string name="d_dinamite_01">там не было стены</string>
    <string name="d_dinamite_02">вы не смогли взорвать эту стену</string>
    <string name="d_dinamite_1">теперь там нет стены</string>

    <string name="k_punch">вы наносите удар ножом</string>
    <string name="k_punch_0">но рядом никого нет</string>
    <string name="k_punch_11">теперь игрок  </string>
    <string name="k_punch_12">  ранен</string>
    <string name="k_punch_21">теперь игроки  </string>
    <string name="k_punch_22">  ранены</string>
    <string name="k_punch_23">  ,  </string>

    <string name="i_s0">Клетка на которой вы стоите: </string>
    <string name="i_s1"> с течением </string>

    <string name="rules_text"><![CDATA[

    <font size=5> <center> Базовые правила </font> </center>
<P>
<ul  type="disc" compact="compact" align=left>

<P><li>   -Ведущий создает лабиринт.</li>
<P><li>  -Ведущий в начале игры по договоренности сообщает о размере лабиринта, количестве Дырок, длине реки, наличии особенностей (резиновые стены, несколько множеств дырок и т. п.)</li>
<P><li>   -Игроки ходят по очереди.</li>
<P><li>   -Передвижение возможно только на соседнюю клетку. Соседними назовем клетки, имеющие общую сторону. Клеточки, касающиеся друг друга всего одной точкой («по диагонали»), соседними не являются.</li>
<P><li>   -Ведущий сообщает о типе клетки, на которую попал игрок после каждой команды (Пустая клетка, Госпиталь, Арсенал, Устье, Исток, Дырка, Выход из лабиринта и т. п.) или о том, что передвижение в данном направлении невозможно — стена.</li>
<P><li>   -Ведущий сообщает, если какой-нибудь игрок был ранен.</li>
</ul>
<P>
<font size=5 align=center>Структура лабиринта </font>

<P>
<ul  type="disc" compact="compact" align=left>

<P><li>   -Лабиринт строится на квадратном игровом поле (от его размера зависит продолжительность и сложность игры, полноценная игра возможна на поле 4×4 клетки).</li>
<P><li>   -Каждая клеточка лабиринта может быть одного из нескольких типов. Основные типы:
<P>
	<ul  type="disc" compact="compact" align=left>
	<P><li>      -Пустая клеточка;</li>
	<P><li>      -Дырка (Яма). Множество дырок составляет упорядоченное множество;</li>
	<P><li>     -Река (начало реки — Исток, конец реки — Устье);</li>
	<P><li>      -Госпиталь (Больница);</li>
	<P><li>      -Арсенал (Склад);</li>
<P>	<li>      -На одной из пустых клеток лабиринта помещается клад;</li> </ul> </li>
<P><li>   -Между двумя соседними клетками может быть стена;</li>
<P><li>   -По периметру лабиринта находится внешняя стена, в которой имеется как минимум один проход — выход из лабиринта;</li>
</ul>

<P>
<font size=5> <center>Начало игры</font> </center>
<P>
<font align=left>Каждый игрок сообщает ведущему точку, с которой он хотел бы начать исследование лабиринта. Вариант — ведущий ставит игроков в известные только ему места.

В начале игры ведущий расставляет фишки игроков, сообщает каждому игроку куда он попал (Пустая клетка, Госпиталь, Арсенал, Устье, Исток, Дырка и т. п.) и делает соответствующее перемещение фишек (если какие-то игроки попали в Дырку или реку).
</font>
<P>
<font size=5> <center>Ход игры</font> </center>
<P>
Далее игроки по очереди ходят. Они могут:
<ul  type="disc" compact="compact" align=left>
<P><li>   -перемещаться (команды «вперед», «назад», «вправо» или «влево» )</li>
<P><li>   -пропускать ход (команда «пропустить ход»)</li>
<P><li>   -стрелять в указанном направлении (команда, например, «стреляю вправо»). Пуля летит в указанном направлении до первой встреченной стенки или до клеточки с другим игроком. Тот, в кого попадут будет ранен.</li>
<P><li>   -ударить кинжалом. Если в клетке есть ещё кто-то — он будет ранен.</li>
<P><li>   -взорвать стену в указанном направлении (команда, например, «взорвать стену справа»). У игрока есть 3 бомбы для взрыва стен.</li>
<P>
<font align=left>
При перемещении ведущий пытается передвинуть фишку игрока в указанном направлении. Ведущий сообщает игроку о результатах: «стена», или «прошел», или «прошел — попал в реку», или «прошел — попал в дырку», или «прошел — нашел клад» и т. п. И ход переходит к другому игроку. При этом:
</font>
<ul  type="disc" compact="compact" align=left>
<P><li>   -Если игрок попал на клеточку Дырка, игроку сообщается, что он попал в Дырку (номер дырки не сообщается) его фишка передвигается на клеточку со следующей дыркой. Следующей для последней дырки считается первая дырка. Далее ход переходит другому игроку. Если из Дырки игрок ходит и упирается в стену, то ему сообщается, что «стена» и он перемещается в следующую дырку. И ход переходит к другому игроку. Игрок, также может пропустить ход, переместившись в следующую дырку.</li>
<P><li>   -Если игрок попал в реку, то ему сообщается, что он попал в реку. Он сразу смещается по течению на две клетки по реке (то есть через одну) от той клетки куда он вошел. Находясь в речке игрок может также двигаться вправо, влево, вперед, назад или пропускать ходы, плывя по течению. Если игрок попал в Устье, то он никуда не смещается.</li>
<P><li>   -Если игрок попал в Арсенал, то его запас патронов, кинжалов, взрывчатки восстанавливается (по 3 единицы каждого). В начале игры — у игрока ничего нет.</li>
<P><li>   -Если игрок попал в Госпиталь, то его здоровье восстанавливается. Раненый игрок не может применять оружие и не может нести клад.</li>
</ul>
<P>
<font align=left>
Клад может носить только здоровый игрок. Если игрока с кладом ранили, то клад остается на том месте, где был ранен игрок. Если игрок с кладом был ранен в реке, то клад затонет останется на месте, пока его никто не заберет.
<P>
Река — это цепочка клеток лабиринта. Эта цепочка может быть непрямая. Река начинается Истоком и кончается Устьем. Попадая в реку игрок смещается на 2 клетки.
<P>
Ведущий старается составить лабиринт так, чтобы из любой точки можно было попасть в любую другую без взрыва стенок. Это уменьшает риск блокирования игрока в какой-то части лабиринта.
<P>
Взято из<a href=" https://ru.wikipedia.org/wiki/%D0%9B%D0%B0%D0%B1%D0%B8%D1%80%D0%B8%D0%BD%D1%82_(%D0%B8%D0%B3%D1%80%D0%B0_%D0%BD%D0%B0_%D0%B1%D1%83%D0%BC%D0%B0%D0%B3%D0%B5)"> статьи в википедии </a>
</font>

    ]]></string>
</resources>