<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <TextView
        android:id="@+id/textView27"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:gravity="bottom"
        android:text="@string/s_player"
        android:textAlignment="center"
        android:textSize="30sp"/>

    <TextView
        android:id="@+id/textView28"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:textAlignment="center"
        android:textSize="30sp"/>

    <TextView
        android:id="@+id/textView29"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:text="@string/r_win"
        android:textAlignment="center"
        android:textSize="30sp"/>

    <Button
        android:id="@+id/button15"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:text="@string/get_inf"
        android:textSize="18sp"/>
</LinearLayout>